[metadata]
name = mypylox
version = 1.0.0
description = A Lox implementation written in Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tusharsadhwani/pylox
author = Tushar Sadhwani
author_email = tushar.sadhwani000@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    attrs>=21.4.0
    typing_extensions; python_version < '3.8'
python_requires = >=3.7
package_dir = =src

[options.packages.find]
where = ./src

[options.entry_points]
console_scripts =
    lox=pylox:main

[options.extras_require]
dev =
    black
    mypy
    pytest
    pytest-cov
    tox

[tool:pytest]
addopts = --cov --cov-report=term-missing

[coverage:report]
exclude_lines =
    \#\s*pragma: no cover\b
    if __name__ == ['"]__main__['"]:$
    ^if TYPE_CHECKING:
    raise NotImplementedError
    (from|import) typing_extensions
    \.\.\.
